fix(PC-110): fix spesc text on mobile screens

--- a/src/modules/ProductDetalisPage/components/Description/Description.module.scss
+++ b/src/modules/ProductDetalisPage/components/Description/Description.module.scss
@@ -27,7 +27,9 @@
 
 .tech {
   display: flex;
+  gap: 10px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .article {
